# task-manager

./: .gitignore  README.md
conf/: config.ini  task-manager.service
db/: add_default.sql  first_create.sql  manager_structure.sql  notify_procedure.sql  notify_trigger.sql
docs/: README.md
old_orm/: manage.py  requirements.txt
old_orm/task/: apps.py  models.py
old_orm/utilities/: all_tuple.py  exceptions.py  info_services.py  logger_wrapper.py  thread_pool.py
src/: base_class.py  manage.py  other_class.py  pyproject.toml  settings.py  task-manager.service  task_svc.py  test_settings.py  thread_pool.py
src/manager/: task_svc.py
src/manager_svc/: settings.py  task_svc.py
src/manager_svc/conf/: config.ini
src/orm/: enum_choice.py  manage.py  models.py  settings.py
src/orm/manager/: models.py
src/rest/: manage.py
src/rest/brave_rest_framework/: exceptions.py  mixins.py  routers.py  serializers.py  viewsets.py
src/rest/main/: rest_uwsgi.ini  settings.py  urls.py  wsgi.py
src/rest/manager/: models.py  serializer.py  tests.py  urls.py  views.py
src/rest/manager/migrations/: 0001_initial.py  0002_auto_20210520_1144.py  0003_auto_20210520_1213.py
src/rest/utils/: exceptions.py  mixins.py  routers.py  serializer.py  serializers.py  shortcuts.py  viewsets.py
src/study/: example_sqlalchemy.py  settings.py
src/tests/: conftest.py  runner.py
src/tests/manager_svc/: test_task_svc.py
src/utils/: exceptions.py  other_class.py  status_type.py  wrapper.py
src/utils/base_utils/: base_class.py  thread_pool.py
(+1 files in other folders)
